tests/paczka1/fuzzy1/46942434.err
Error in line 2: ZdT S198 42,3
Error in line 5: ZdT S115 35,8
Error in line 9: g2H5e S115 14,3
Error in line 8: gCX5EfB6 S541 0,9
Error in line 10: g2H5e S198 19,4
Error in line 17: g2H5e A332 -1,2
Error in line 14: g2H5e A332 38,3
Error in line 22: YmD S198 36,8
Error in line 23: g2H5e S198 10,3
Error in line 30: gCX5EfB6 S541 28,7
Error in line 31: gCX5EfB6 S198 70,5
